<resources>
    <string name="app_name">LED Client</string>

    <string name="demo_text">text</string>
<!--    <string name="demo_date">date</string>-->

    <!-- Menus -->
    <string name="menu_settings">Indstillinger</string>

    <!-- Dialogs -->
    <string name="dialog_title">Information</string>
    <string name="dialog_confirm_title">Bekræft venligst</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Annuller</string>
<!--    <string name="dialog_save">Gem</string>-->
<!--    <string name="dialog_error">Fejl:</string>-->
<!--    <string name="dialog_error304">Din oprettelse / opdatering blev ikke udført, prøv igen senere ellers kontakt support</string>-->
<!--    <string name="dialog_error400">Der mangler informationer til at kunne udføre forespørgsel, kontakt support</string>-->
<!--    <string name="dialog_error401">Du mangler rettigheder til at udføre denne funktion, prøv at logge ud af app og ind igen, ellers kontakt support</string>-->
<!--    <string name="dialog_error404">Ressourcen blev ikke fundet, prøv at logge ud af app og ind igen, ellers kontakt support</string>-->
<!--    <string name="dialog_error500">Der opstod en fejl på webserveren, prøv igen lidt senere, ellers kontakt support</string>-->
<!--    <string name="dialog_error503">Webserveren fik timeout, prøv igen lidt senere, ellers kontakt support</string>-->
<!--    <string name="dialog_errorNoAddressAssociatedWithHostName">Kontroller venligst at enheden har forbindelse til internettet</string>-->
<!--    <string name="dialog_errorDefault">Ukendt fejl prøv at lukke app\'en og starte den op på ny</string>-->

    <!-- Dialog Loading -->
    <string name="dialog_loading_pleaseWait">Vent venligst&#8230;</string>
<!--    <string name="dialog_loading_login">Logger ind</string>-->
<!--    <string name="dialog_loading_logout">Logger ud</string>-->
<!--    <string name="dialog_loading_getComponentTypes">Henter komponenttyper</string>-->
<!--    <string name="dialog_loading_getComponents">Henter komponenter</string>-->
<!--    <string name="dialog_loading_synchronizeData">Synkroniserer data</string>-->

    <!-- Dialog Pong -->
    <string name="dialogPong_player1">Spiller 1</string>
    <string name="dialogPong_player2">Spiller 2</string>
    <string name="dialogPong_player12">Spiller 1 og 2</string>

    <!-- Connection Default -->
    <string name="connection_defaultIP">192.168.4.1</string>
    <string name="connection_defaultPort">333</string>
    <string name="connection_defaultText">Test</string>

    <!-- TCP Connection Status -->
    <string name="status_connecting">Forbinder</string>
    <string name="status_connected">Forbundet</string>
    <string name="status_reconnecting">Forbinder igen</string>
    <string name="status_disconnecting">Lukker forbindelse</string>
    <string name="status_disconnected">Ikke forbundet</string>

    <!-- Connection Setup Activity -->
    <string name="connectionSetup_connection">Forbindelse</string>
    <string name="connectionSetup_status">Status: [STATUS].</string>
    <string name="connectionSetup_ip">Server ip</string>
    <string name="connectionSetup_port">Server port</string>
    <string name="connectionSetup_connect">Forbind til server</string>
    <string name="connectionSetup_disconnect">Luk forbindelse</string>
    <string name="connectionSetup_sendMessage">Send besked</string>
    <string name="connectionSetup_message">Besked</string>
    <string name="connectionSetup_send">Send</string>
    <string name="connectionSetup_time">Tid for send og modtag:</string>

    <!-- Connection Status Activity -->
    <string name="connectionStatus_status">Status: [STATUS].</string>
    <string name="connectionStatus_message">Hukommelse: [MEMORY] bytes fri.</string>
    <string name="connectionStatus_connect">Forbind</string>
    <string name="connectionStatus_setup">Opsætning</string>

    <!-- Home Activity -->
    <string name="home_brightness">Lysstyrke</string>
    <string name="home_chooseMode">Funktioner</string>
    <string name="home_main">Demo</string>
    <string name="home_pong">Pong</string>

    <!-- Main Activity -->
    <string name="main_loopInterval">Opdateringshastighed</string>
    <string name="main_stripClear">Nulstil strip</string>
    <string name="main_stripClearOn">Til</string>
    <string name="main_stripClearOff">Fra</string>
    <string name="main_mode">Tilstand</string>
    <string name="main_chooseMode">Vælg tilstand</string>
    <string name="main_color">Farve</string>

    <!-- Dialog Main Modes -->
    <string name="dialogMainModes_blink">Blink</string>
    <string name="dialogMainModes_wipe">Wipe</string>
    <string name="dialogMainModes_theaterChase">Theater Chase</string>
    <string name="dialogMainModes_rainbow">Rainbow</string>
    <string name="dialogMainModes_theaterChaseRainbow">Theater Chase Rainbow</string>
    <string name="dialogMainModes_compass">Compass</string>

    <!-- Pong Activity -->
    <string name="pong_player1">Player 1</string>
    <string name="pong_player2">Player 2</string>
</resources>
