<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/connectionSetup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.connectionSetup.ConnectionSetupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/cell_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/cell_margin"
            app:cardCornerRadius="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/connectionSetup_connection"
                    android:textSize="@dimen/heading" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:background="@color/colorDivider" />

                <TextView
                    android:id="@+id/statusTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connectionSetup_status" />

                <EditText
                    android:id="@+id/ipEditText"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/connectionSetup_ip"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/portEditText"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/connectionSetup_port"
                    android:inputType="text" />

                <Button
                    android:id="@+id/connectButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connectionSetup_connect" />

                <Button
                    android:id="@+id/disconnectButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connectionSetup_disconnect" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/cell_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/cell_margin"
            app:cardCornerRadius="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/connectionSetup_sendMessage"
                    android:textSize="@dimen/heading" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:background="@color/colorDivider" />

                <EditText
                    android:id="@+id/messageEditText"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/connectionSetup_message"
                    android:inputType="text" />

                <Button
                    android:id="@+id/messageButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connectionSetup_send" />

                <TextView
                    android:id="@+id/timeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connectionSetup_time" />

                <TextView
                    android:id="@+id/messageTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
