<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/player1Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/menu"
            android:text="@string/dialogPong_player1" />

        <Button
            android:id="@+id/player2Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/menu"
            android:text="@string/dialogPong_player2" />

        <Button
            android:id="@+id/player12Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/menu"
            android:text="@string/dialogPong_player12" />
    </LinearLayout>
</ScrollView>