<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:orientation="vertical">

        <TextView
                style="@style/textViewHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dialog_title"/>

        <TextView
                android:id="@+id/textView"
                style="@style/textViewNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="false"
                android:text="@string/demo_text"
                android:textColor="@color/colorPrimary"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <Button
                    android:id="@+id/okButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_ok"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>